--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,6 @@ jobs:
       - name: Check and test
         run: |
           cargo fmt --all --check
+          rustup component add rust-src
           cargo clippy --all-targets -- -D warnings -A unused-imports
           cargo t
